refactor: LocationService 메소드 위치 수정, 삭제, 기타 수정